# app/Http/Controllers/Api/FlashEventController.php
@@ -3,7 +3,10 @@
 namespace App\Http\Controllers\Api;
 
 use App\FlashEvent;
+use App\FlashEventDetail;
+use App\Http\Resources\FlashEventDetailResource;
 use App\Http\Resources\FlashEventResource;
+use App\PulsaBuy;
 use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
@@ -38,8 +41,6 @@ class FlashEventController extends ApiController
      * )
      */
     public function get_flash_event(Request $request){
-        $user = $this->user;
-        $today = Carbon::now();
         $validation = Validator::make($request->all(), [
             'event_code' => 'required'
         ]);
@@ -48,12 +49,127 @@ class FlashEventController extends ApiController
             return $this->errorResponse($validation->errors(),static::CODE_ERROR_VALIDATION);
         }
 
-        $query_flash_event = FlashEvent::where('row_status','=','active')->with('detail')->where('event_code','=',$request->event_code);
+        $arr_flash = self::map_flash_event($request->event_code);
+        if(!$arr_flash){
+            return $this->errorResponse(static::ERROR_NOT_FOUND,static::CODE_ERROR_VALIDATION);
+        }
+
+        $response = [
+            'flash_event' => FlashEventResource::collection($arr_flash)
+        ];
+
+        return $this->successResponse($response);
+    }
+
+    /**
+     * @OA\Get(
+     *   path="/api/flash-event/detail/product",
+     *   summary="get product by flash event detail code",
+     *   tags={"flash-event"},
+     *     @OA\Parameter(
+     *          name="mmses",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *     ),
+     *     @OA\Parameter(
+     *          name="flash_detail_code",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *     ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="Product details"
+     *   )
+     * )
+     */
+    public function get_flash_event_product(Request $request){
+        $product = FlashEventDetail::where('flash_detail_code','=', $request->flash_detail_code)->get();
+
+        if(!$product){
+            return $this->errorResponse(static::ERROR_NOT_FOUND,static::CODE_ERROR_VALIDATION);
+        }
+
+        $stock = PulsaBuy::where('flash_detail_code','=',$request->flash_detail_code)->count();
+
+
+        foreach ($product as &$item){
+            $item['stock'] = $stock;
+        }
+
+        $response = [
+            'flash_event' => FlashEventDetailResource::collection($product)
+        ];
+
+        return $this->successResponse($response);
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/api/flash-event/detail/product/buy",
+     *   summary="buy the product by flash event detail code",
+     *   tags={"flash-event"},
+     *     @OA\Parameter(
+     *          name="mmses",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *     ),
+     *     @OA\Parameter(
+     *          name="flash_detail_code",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *     ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="Transaction success"
+     *   )
+     * )
+     */
+    public function buy_product(Request $request){
+        $user = $this->user;
+
+        $product = FlashEventDetail::with('flash_event')->where('flash_detail_code','=', $request->flash_detail_code)->first();
+        if(!$product){
+            return $this->errorResponse(static::ERROR_NOT_FOUND,static::CODE_ERROR_VALIDATION);
+        }
+
+        if(count(self::map_flash_event($product->flash_event->event_code)) == 0){
+            return $this->errorResponse(static::ERROR_FLASH_EVENT_EXPIRED,static::ERROR_CODE_FLASH_EVENT_EXPIRED);
+        }
+
+        $stock = PulsaBuy::where('flash_detail_code','=',$request->flash_detail_code)->count();
+
+        if($product->cap < $stock){
+            return $this->errorResponse(static::ERROR_FLASH_EVENT_OUT_OF_STOCK,static::ERROR_CODE_FLASH_EVENT_OUT_OF_STOCK);
+        }
+
+        $response = [];
+
+        return $this->successResponse($product);
+    }
+
+    public function map_flash_event($event_code){
+        $user = $this->user;
+        $today = Carbon::now();
+
+        $query_flash_event = FlashEvent::where('row_status','=','active')->with('detail')->where('event_code','=',$event_code);
         if($user->is_tester){
             $query_flash_event->where('is_tester','=',true);
         }else{
             $query_flash_event->where('is_tester','=',false);
         }
+
         $arr_flash_event = $query_flash_event->get();
         $arr_flash = [];
         foreach ($arr_flash_event as $item){
@@ -91,14 +207,6 @@ class FlashEventController extends ApiController
             array_push($arr_flash, $item);
         }
 
-        if(!$arr_flash){
-            return $this->errorResponse(static::ERROR_NOT_FOUND,static::CODE_ERROR_VALIDATION);
-        }
-
-        $response = [
-            'flash_event' => FlashEventResource::collection($arr_flash)
-        ];
-
-        return $this->successResponse($response);
+        return $arr_flash;
     }
 }
